# dabeplech

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_local_quality_tests.sh  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new-api-connector.md  new-parser.md
.github/workflows/: coverage.yml  python-package.yml  python-publish.yml
bioapi/: __init__.py  base.py  kegg.py  metagenedb.py  togows.py  version.py
bioapi/parsers/: base.py
dabeplech/: __init__.py  base.py  doi.py  hal.py  kegg.py  metagenedb.py  ncbi_taxonomy.py  ols.py  pdbe.py  togows.py  version.py
dabeplech/models/: kegg.py  ncbi_taxonomy.py
dabeplech/parsers/: base.py
dabeplech/scrappers/: ncbi_taxonomy.py
docs/: API_doc.rst  changelog.rst  changelogs.rst  conf.py  contribution_guide.rst  how_to_use.rst  index.rst  installation.rst  introduction.rst  requirements.txt  supported_api.rst  why_bioapi.rst  why_dabeplech.rst
docs/api_docs/: api_services.rst  parsers.rst  scrap_api.rst  scrappers.rst
docs/contribution_guide/: api_connector.rst  code_of_conduct.rst  contributing.rst  docs.rst  environment.rst  flow.rst  issue.rst  model.rst  parser.rst  scrapper.rst
docs/user_guide/: basic_usage.rst  installation.rst  scrapped_pages.rst  supported_api.rst  tips.rst
tasks/: __init__.py  docs.py  quality.py  tests.py
tests/: api_status.py
tests/scripts/: api_status.py  doi_api_status.py  hal_api_status.py  kegg_api_status.py  ols_api_status.py  pdbe_api_status.py  togows_api_status.py  utils.py
(+60 files in other folders)
