[tool.poetry]
name = "dabeplech"
version = "0.6.0"
description = "Light library to perform request to different bioinformatics APIs"
authors = ["Kenzo-Hugo Hillion <hillion.kenzo@posteo.net>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
colored = "^1.4.2"
requests-cache = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pylint = "ipython"
ipython = "^7.21.0"
black = "^20.8b1"
pydocstyle = "^5.1.1"
invoke = "^1.5.0"
Sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
